# rust-web-app

./: Cargo.toml
etc/: api-server.yaml  web-app.yaml
src/: api.rs  cli.rs  log.rs  main.rs  server.rs
src/api/: error.rs  interface.rs  jwt.rs  mod.rs
src/db/: mod.rs
src/user/: mod.rs
