[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# cli
config = "0.14"
clap = {version = "4", features = ["derive"]}

# serde
serde = { version = "1", features = ["derive"] }

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# error
thiserror = { version = "1"}
anyhow = {version = "1"}

# runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7"}
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["timeout", "trace"] }

# web
axum = { version = "0.7", features = ["tracing", "macros"] }
axum-extra = {version = "0.9", features = ["typed-header", "query"]}
axum-prometheus = { version = "0.7" }
jsonwebtoken = "9"

# db
sqlx =  { version = "0.8" ,features = ["macros", "runtime-tokio", "json", "postgres", "derive", "uuid", "ipnetwork"]}